# retrieval_with_highlighting

./: .gitignore  00_setup.py  01_ingest.ipynb  01_ingest.py  02_featurize.py  02_inference.py  02_vector_search.py  03_inference.py  03a_search_inference.py  03b_chat_inference.py  04_interface.py  README.md  pyproject.toml  requirements.txt
agents/langgraph/: agent.py  config.yaml
agents/search/: agent.py
assets/: elaws_links.csv
interface/: app.yaml  config.yaml  search.py
interfaces/chat/: app.yaml  chat.py
interfaces/search/: app.yaml  config.yaml  search.py
interfaces/streamlit/: search.py
notebooks/: ingest_local.ipynb  langgraph_agent.ipynb  retriever_local.ipynb
src/: config.py  interface.py  nodes.py  prompts.py  retrievers.py  states.py  utils.py
